# claudegram

./: .env.example  .gitignore  CLAUDE.md  CLOUD_SETUP.md  README.md  REQUIREMENTS.md  check_bot_config.py  debug_polling.py  pyproject.toml  setup_claude_desktop.py  setup_cloud.sh
.claude/: mcp.json  settings.local.json
cloudflare/: .gitignore  DEPLOYMENT.md  package.json  wrangler.toml
cloudflare/migrations/: 0001_initial.sql
cloudflare/src/: index.js  user-session.js
src/telegram_io_mcp/: __init__.py  cloud_client.py  database.py  models.py  server.py  telegram_client.py
tests/: __init__.py  get_chat_id.py  test_bot_setup.py  test_database.py  test_telegram_client.py
